# delta-generator-pybind11

./: .gitignore  CMakeLists.txt  setup.py
src/: delta_generator_pybind11.cpp  update_metadata.proto
